Bug 255309 - Unreviewed, fix build after 262846@main
Summary: Unreviewed, fix build after 262846@main
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: WebKit2 (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Chris Dumez
URL:
Keywords: InRadar
Depends on:
Blocks:
 
Reported: 2023-04-11 16:37 PDT by Chris Dumez
Modified: 2023-04-11 17:21 PDT (History)
2 users (show)

See Also:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Chris Dumez 2023-04-11 16:37:31 PDT
Fix build after 262846@main
Comment 1 Radar WebKit Bug Importer 2023-04-11 16:37:47 PDT
<rdar://problem/107909116>
Comment 2 Chris Dumez 2023-04-11 16:41:40 PDT
Pull request: https://github.com/WebKit/WebKit/pull/12630
Comment 3 EWS 2023-04-11 17:21:42 PDT
Committed 262850@main (bce239530886): <https://commits.webkit.org/262850@main>

Reviewed commits have been landed. Closing PR #12630 and removing active labels.