Unreviewed, fix build after 262846@main https://bugs.webkit.org/show_bug.cgi?id=255309 rdar://107909116

* Source/WebKit/Platform/IPC/StreamServerConnection.h:
(IPC::StreamServerConnection::send):

Canonical link: https://commits.webkit.org/262850@main